use real em dashes

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1722,7 +1722,7 @@
   bio: >
     Ori's a marketing, communications, and content specialist, who formerly worked for
     18F and the Beeck Center for Social Impact and Innovation. Ori's also worked in
-    TV, radio, and digital media &mdash; on both the journalism and corporate communications
+    TV, radio, and digital media — on both the journalism and corporate communications
     sides. He lives in Virginia.
   active: false
   order: 450
