--- a/_data/values.yml
+++ b/_data/values.yml
@@ -17,7 +17,7 @@
 - title: Unleash the full potential of our people.
   statement: >
     We believe a culture of learning and development brings out the highest levels of performance
-    &mdash; both individually and organizationally. We apply design thinking to the employee experience
+    — both individually and organizationally. We apply design thinking to the employee experience
     to make worklife simple, flexible, enjoyable, and productive. We uphold a simple,
     unbureaucratic business model that makes our organization as capable as the people who
     work within it. In sum, we empower you to reach your full potential and unleash your skills
@@ -31,7 +31,7 @@
     fully recognize people’s unique ideas and contributions. We go out of our way to acknowledge
     the original source, not just the most recent or loudest contributor.
   order: 40
-- title: Change for the better &mdash; every day.
+- title: Change for the better — every day.
   statement: >
     Big results come from small changes accumulated over time. We foster collaborative environments
     where everyone proactively works together to achieve regular, incremental improvements to the
@@ -39,7 +39,7 @@
   order: 50
 - title: Pursue modern ways of working.
   statement: >
-    New trends and technologies are constantly on the horizon. We embrace &mdash; even pioneer &mdash;
+    New trends and technologies are constantly on the horizon. We embrace — even pioneer —
     new developments, go deep to understand their viability and impact, and harness those
     with the greatest promise to the benefit of our clients and employees.
   order: 60
