--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2217,7 +2217,7 @@
   image_description: Photo of Mina Cairns
   position: Head of Corporate Development
   bio: >
-    Mina possesses nearly 20 years of management and consulting experience in the public sector. She previously worked for firms such as Deloitte and Grant Thornton. Mina lives in Florida.
+    Mina possesses nearly 20 years of consulting, technology, and management experience in the public sector. She previously held leadership positions at firms such as Deloitte and Grant Thornton. Mina lives in Florida.
   active: true
   socials:
     - name: LinkedIn
