--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1231,7 +1231,7 @@
     Eric's a researcher and designer, with a passion for co-creation and
     tackling complex social challenges. He was a 2019 Civic Digital Fellow at
     18F and graduated from UC San Diego with degrees in Human-Computer Interaction
-    and Design for Social Innovation. Eric lives in California.
+    and Design for Social Innovation. Eric lives in Massachusetts.
   active: true
   order: 280
   socials:
@@ -1911,7 +1911,7 @@
   image_description: Photo of Nicole Wright
   position: Product Manager
   bio: >
-    Nicole's a product manager, who's drawn to delivering products that help people. Most recently, she worked with the Air Force's Kessel Run program to modernize in-air refueling planning and platform development. Nicole lives in Massachusetts.
+    Nicole's a product manager, who's drawn to delivering products that help people. Most recently, she worked with the Air Force's Kessel Run program to modernize in-air refueling planning and platform development. Nicole lives in Washington.
   active: true
   order: 530
   socials:
