--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -30,7 +30,7 @@
   category: Product & Delivery
   location: Remote
   order: 50
-- title: UX Researcher
+- title: User Researcher
   url: https://apply.workable.com/skylight/j/681D1CD9D5/
   category: Research & Design
   location: Remote
