--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1466,7 +1466,7 @@
   profile_path: /company/about/#olivia-lucas
   image: /img/people/olivia-lucas.jpg
   image_description: Photo of Olivia Lucas
-  position: UX Designer
+  position: UX Researcher
   bio: >
     Olivia's a UX researcher and designer, who previously worked at Fjord. She's
     passionate about combining qualitative and quantitative research methods to
