--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ localhost: localhost:4000
 twitter_url: https://twitter.com/skylight_hq
 github_repo_url: https://github.com/skylight-hq
 github_issues_url: https://github.com/skylight-hq/skylight.digital/issues
-linkedin_url: https://www.linkedin.com/company/skylight-hq
+linkedin_url: https:// www.linkedin.com/company/skylight-hq
 carrot_url: https://carrot.io/skylight/
 hackerone_url: https://hackerone.com/skylight_qgvpb
 slack_invite_url: ""
-youtube_url: https://www.youtube.com/channel/UCbNzANEv5xYqfMbDrv8kcEw
+youtube_url: https://youtube.com/channel/UCbNzANEv5xYqfMbDrv8kcEw
 
 # Build settings
 incremental: true
