Add content guide content

--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -189,5 +189,7 @@ content_guide:
       url: /work/toolkits/content-guide/copyright-and-trademarks/
     - title: Word list
       url: /work/toolkits/content-guide/word-list/
+    - title: Definition of terms
+      url: /work/toolkits/content-guide/definition-of-terms/
     - title: Further reading
       url: /work/toolkits/content-guide/further-reading/
