Update page title

--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -159,8 +159,8 @@ service_design_framework:
   toc:
     - title: Service design overview
       url: /work/toolkits/service-design-framework/
-    - title: The service design toolkit
-      url: /work/toolkits/service-design-framework/the-service-design-toolkit/
+    - title: The Skylight Service Design Framework
+      url: /work/toolkits/service-design-framework/the-skylight-service-design-framework/
     - title: "Phase 1: Initiate"
       url: /work/toolkits/service-design-framework/phase-1-initiate/
     - title: "Phase 2: Discover"
